fix: Use localhost URLs for Docker Compose run